--- a/Arcade Basketball/Packages/manifest.json
+++ b/Arcade Basketball/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.xr.management": "4.5.1",
+    "uk.lunalabs.luna": "file:C:/Users/PC/Downloads/6.4.0/scripts",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
